'add new' and 'edit' use cases

--- a/a1/a1/Views/Venues/Details.cshtml
+++ b/a1/a1/Views/Venues/Details.cshtml
@@ -1,10 +1,10 @@
 ﻿@model a1.Models.VenueBaseViewModel
 
 @{
-    ViewBag.Title = "Venue Details";
+    ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2>Venue Details</h2>
 
 <div>
     <hr />
