--- a/a1/a1/Views/Venues/Edit.cshtml
+++ b/a1/a1/Views/Venues/Edit.cshtml
@@ -14,6 +14,11 @@
     <h4>VenueEditViewModel</h4>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
+    @Html.HiddenFor(model => model.VenueId)
+
+    @Html.HiddenFor(model => model.Company)
+
     <div class="form-group">
         @Html.LabelFor(model => model.Address, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
